--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "html2canvas": "^1.4.1",
     "phosphor-react": "^1.4.1",
