--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
+    "react-select": "^5.7.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.6",
     "tailwind-scrollbar": "^1.3.1"
